fix(ffe-searchable-dropdown-react): overflow hidden on dropdown list

--- a/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
+++ b/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
@@ -13,6 +13,7 @@
         z-index: 100000;
         border-radius: 2px;
         height: 0;
+        overflow: hidden;
         .native & {
             @media (prefers-color-scheme: dark) {
                 background: @ffe-grey-charcoal-darkmode;
